<resources>
    <string name="app_name">RZDProject</string>
    <string name="name_company">ОАО «РЖД»</string>
    <string name="name_sistem">Система обслуживания</string>
    <string name="name_window">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="text_btn">ВОЙТИ В СИСТЕМУ</string>
    <string name="text_edittext">Введите пароль</string>
    <string name="text_dispatcher_activity">Панель управления</string>
    <string name="text_user_name">Добро пожаловать Иванов И.И.</string>
    <string name="exit">Выйти</string>
    <string name="name_functions">Функции системы</string>
    <string name="name_one_functions">График обслуживания</string>
    <string name="description_one_functions">Планирование и контроль работ</string>
    <string name="name_two_functions">Заявки на обслуживание</string>
    <string name="description_two_functions">Обработка входящих заявок</string>
    <string name="name_three_functions">Объекты обслуживания</string>
    <string name="description_three_functions">Список и состояние объектов</string>
    <string name="name_four_functions">Сотрудники</string>
    <string name="description_four_functions">Управление персоналом</string>
    <string name="name_five_functions">Бригады</string>
    <string name="description_five_functions">Формирование рабочих групп</string>
    <string name="name_bottom">© ОАО «РЖД», 2026</string>
    <string name="name_version">Версия 1.0.0 | v10.02.2026</string>
    <string name="name_claims">Заявки на обслуживание</string>
    <string name="name_claims_window">Управление заявками</string>
    <string name="new_claims">Новых заявок</string>
    <string name="number_claims">5</string>
    <string name="text_claims">Новые заявки</string>
    <string name="name_delete_window">Подтверждение удаления</string>
    <string name="text_delete">Вы действительно хотите удалить эту заявку?</string>
    <string name="name_delete_claim">Станция Тверь</string>
    <string name="text_delete_team">Бригада:</string>
    <string name="delete_team">Бригада А</string>
    <string name="text_delete_type_object">Тип работ:</string>
    <string name="text_delete_type">Техническое обслуживание</string>
    <string name="text_delete_date">Дата:</string>
    <string name="text_date">16.09.2026</string>
    <string name="name_edit_request">Редактирование заявки</string>
    <string name="name_object_edit">Название объекта:</string>
    <string name="text_date_edit">Дата выполнения:</string>
    <string name="name_employees_window">Сотрудники</string>
    <string name="text_employees">Каталог сотрудников</string>
    <string name="text_list_employees">Список сотрудников</string>
    <string name="name_objects_window">Объекты обслуживания</string>
    <string name="text_objects_catalog">Каталог объектов обслуживания</string>
    <string name="text_all_objects">Все объекты (5)</string>
    <string name="text_objects">Объекты обслуживания</string>
    <string name="name_team_window">Бригады</string>
    <string name="text_fio_employees">Иванов Иван Иванович</string>
    <string name="text_post_and_team">Инженер • Бригада А</string>
    <string name="name_object">Название объекта</string>
    <string name="name_team">Бригада</string>
    <string name="name_request_object">Название объекта</string>
    <string name="text_request_object_description">Описание заявки</string>
    <string name="text_request_date">01.01.2026</string>
    <string name="text_priority">Средний</string>
    <string name="text_object_card_type">Тип объекта: Станция</string>
    <string name="text_object_card_address">Адрес: г.Тверь, ул. Коминтерна, 18</string>
    <string name="text_object_card_team">Ответственная бригада: Бригада Б</string>
    <string name="text_post">Инженер</string>
    <string name="text_contacts">Контакты:</string>
    <string name="text_number">Телефон: +7 (999) 123-45-67</string>
    <string name="text_email">Электронная почта: i.ivanov@rzd.ru</string>
</resources>