<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Заголовок (Название станции) -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_object_edit"
            android:textColor="@color/rzd_text_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:gravity="start"/>

        <!-- Тип объекта -->
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_object_card_type"
            android:textColor="@color/rzd_text_primary"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        <!-- Адрес -->
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_object_card_address"
            android:textColor="@color/rzd_text_primary"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        <!-- Ответственная бригада -->
        <TextView
            android:id="@+id/tv_brigade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_object_card_team"
            android:textColor="@color/rzd_text_primary"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>



    </LinearLayout>
</androidx.cardview.widget.CardView>